Add Log to rest

--- a/service-web-rest/src/main/resources/application.properties
+++ b/service-web-rest/src/main/resources/application.properties
@@ -17,3 +17,5 @@ logging.level.org.apache.curator: ${LOGGING_LEVEL_ZOOKEEPER}
 
 # Apache Kafka logging.
 logging.level.org.apache.kafka: ${LOGGING_LEVEL_KAFKA}
+
+logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
