--- a/settings.gradle
+++ b/settings.gradle
@@ -18,6 +18,7 @@ include ':service-streaming-media'
 include ':service-tenant-management'
 include ':service-user-management'
 include ':service-web-rest'
+include ':service-mqtt-acl'
 //include ':service-openhab-rule'
 
 include ':sitewhere-cassandra'
@@ -55,6 +56,7 @@ project(':service-streaming-media').projectDir = "$rootDir/service-streaming-med
 project(':service-tenant-management').projectDir = "$rootDir/service-tenant-management" as File
 project(':service-user-management').projectDir = "$rootDir/service-user-management" as File
 project(':service-web-rest').projectDir = "$rootDir/service-web-rest" as File
+project(':service-mqtt-acl').projectDir = "$rootDir/service-mqtt-acl" as File
 //project(':service-openhab-rule').projectDir = "$rootDir/service-openhab-rule" as File
 
 project(':sitewhere-cassandra').projectDir = "$rootDir/sitewhere-cassandra" as File
