IOT-325: hay đổi chức năng đăng ký mới thiết bị sẽ thêm phần phân quyền trên MQTT

--- a/service-mqtt-acl/build.gradle
+++ b/service-mqtt-acl/build.gradle
@@ -10,7 +10,7 @@ dependencies {
 
 apply plugin: 'org.springframework.boot'
 springBoot {
-    mainClassName = 'com.sitewhere.devicestate.MqttAclApplication'
+    mainClassName = 'com.sitewhere.mqtt.acl.MqttAclApplication'
 }
 
 // Keep original jar.
