--- a/settings.gradle
+++ b/settings.gradle
@@ -19,6 +19,7 @@ include ':service-tenant-management'
 include ':service-user-management'
 include ':service-web-rest'
 include ':service-mqtt-acl'
+include ':service-certificate'
 //include ':service-openhab-rule'
 
 include ':sitewhere-cassandra'
@@ -57,6 +58,7 @@ project(':service-tenant-management').projectDir = "$rootDir/service-tenant-mana
 project(':service-user-management').projectDir = "$rootDir/service-user-management" as File
 project(':service-web-rest').projectDir = "$rootDir/service-web-rest" as File
 project(':service-mqtt-acl').projectDir = "$rootDir/service-mqtt-acl" as File
+project(':service-certificate').projectDir = "$rootDir/service-certificate" as File
 //project(':service-openhab-rule').projectDir = "$rootDir/service-openhab-rule" as File
 
 project(':sitewhere-cassandra').projectDir = "$rootDir/sitewhere-cassandra" as File
