--- a/sitewhere-communication/build.gradle
+++ b/sitewhere-communication/build.gradle
@@ -12,8 +12,12 @@ dependencies {
     // MQTT dependencies.
     compile group: 'org.fusesource.mqtt-client', name: 'mqtt-client', version:'1.12'
     compile group: 'org.fusesource.hawtdispatch', name: 'hawtdispatch', version:'1.22'
-	
+
 	compile group: 'com.google.protobuf', name: 'protobuf-java', version: "${rootProject.ext['protobuf.version']}"
+
+    // Bouncy Castle Crypto package is a Java implementation of cryptographic algorithms
+    compile group: 'org.bouncycastle', name: 'bcprov-jdk15on', version: "${rootProject.ext['bouncycastle.version']}"
+    compile group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: "${rootProject.ext['bouncycastle.version']}"
 
     compile fileTree(include: ['*.jar'], dir: '../libs')
 }
