--- a/service-certificate/build.gradle
+++ b/service-certificate/build.gradle
@@ -4,6 +4,7 @@ dependencies {
     compile project(':sitewhere-microservice')
     compile project(':sitewhere-grpc-client')
 
+    compile group: 'org.springframework', name: 'spring-web'
     // Supported databases.
     compile project(':sitewhere-mongodb')
     compile group: 'org.bouncycastle', name: 'bcpkix-jdk15on', version: '1.61'
