--- a/build.gradle
+++ b/build.gradle
@@ -72,7 +72,8 @@ subprojects {
  	apply plugin: 'io.spring.dependency-management'
 	dependencyManagement {
 		imports {
-			mavenBom 'io.spring.platform:platform-bom:Cairo-SR1'
+			mavenBom "org.springframework.cloud:spring-cloud-dependencies:Greenwich.SR1"
+			mavenBom 'io.spring.platform:platform-bom:Cairo-SR8'
 		}
 	}
 
