change spring platform and add spring cloud

--- a/service-web-rest/src/main/resources/application.properties
+++ b/service-web-rest/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # Spring Boot configuration properties.
-
+spring.main.allow-bean-definition-overriding=true
 # Uncomment to debug Spring issues.
 # logging.level.org.springframework: DEBUG
 
