add docker mosquitto with plugin auth

--- a/viniot-mosquitto/Dockerfile
+++ b/viniot-mosquitto/Dockerfile
@@ -49,26 +49,26 @@ RUN apk update \
  # Install mongo-c-driver
  && make install \
 
- && cd / \
- && git clone git://github.com/jpmens/mosquitto-auth-plug.git  \
- && cd mosquitto-auth-plug  \
- && cp config.mk.in config.mk  \
- && sed -i "s/BACKEND_MYSQL ?= yes/BACKEND_MYSQL ?= no/" config.mk  \
- && sed -i "s/BACKEND_REDIS ?= no/BACKEND_REDIS ?= yes/" config.mk  \
- && sed -i "s/BACKEND_HTTP ?= no/BACKEND_HTTP ?= yes/" config.mk   \
- && sed -i "s/BACKEND_POSTGRES ?= no/BACKEND_POSTGRES ?= yes/" config.mk   \
- && sed -i "s/BACKEND_JWT ?= no/BACKEND_JWT ?= yes/" config.mk  \
- && sed -i "s/BACKEND_MONGO ?= no/BACKEND_MONGO ?= yes/" config.mk  \
- && sed -i "s/BACKEND_FILES ?= no/BACKEND_FILES ?= yes/" config.mk  \
- && sed -i "s/MOSQUITTO_SRC =/MOSQUITTO_SRC = ..\//" config.mk \
- && sed -i "s/EVP_MD_CTX_new/EVP_MD_CTX_create/g" cache.c  \
- && sed -i "s/EVP_MD_CTX_free/EVP_MD_CTX_destroy/g" cache.c  \
- && make \
- && install -s -m755 auth-plug.so /usr/local/lib/ \
- && install -s -m755 np /usr/local/bin/ \
-
- && apk del .tool-deps .build-deps \
- && rm -rf /var/cache/apk/* /tmp/*
+# && cd / \
+# && git clone git://github.com/jpmens/mosquitto-auth-plug.git  \
+# && cd mosquitto-auth-plug  \
+# && cp config.mk.in config.mk  \
+# && sed -i "s/BACKEND_MYSQL ?= yes/BACKEND_MYSQL ?= no/" config.mk  \
+# && sed -i "s/BACKEND_REDIS ?= no/BACKEND_REDIS ?= yes/" config.mk  \
+# && sed -i "s/BACKEND_HTTP ?= no/BACKEND_HTTP ?= yes/" config.mk   \
+# && sed -i "s/BACKEND_POSTGRES ?= no/BACKEND_POSTGRES ?= yes/" config.mk   \
+# && sed -i "s/BACKEND_JWT ?= no/BACKEND_JWT ?= yes/" config.mk  \
+# && sed -i "s/BACKEND_MONGO ?= no/BACKEND_MONGO ?= yes/" config.mk  \
+# && sed -i "s/BACKEND_FILES ?= no/BACKEND_FILES ?= yes/" config.mk  \
+# && sed -i "s/MOSQUITTO_SRC =/MOSQUITTO_SRC = ..\//" config.mk \
+# && sed -i "s/EVP_MD_CTX_new/EVP_MD_CTX_create/g" cache.c  \
+# && sed -i "s/EVP_MD_CTX_free/EVP_MD_CTX_destroy/g" cache.c  \
+# && make \
+# && install -s -m755 auth-plug.so /usr/local/lib/ \
+# && install -s -m755 np /usr/local/bin/ \
+#
+# && apk del .tool-deps .build-deps \
+# && rm -rf /var/cache/apk/* /tmp/*
 
 COPY run.sh /
 RUN chmod +x /run.sh
