--- a/viniot-mosquitto/Dockerfile
+++ b/viniot-mosquitto/Dockerfile
@@ -42,12 +42,12 @@ RUN apk update \
  && cd mosquitto-auth-plug  \
  && cp config.mk.in config.mk  \
  && sed -i "s/BACKEND_MYSQL ?= yes/BACKEND_MYSQL ?= no/" config.mk  \
- && sed -i "s/BACKEND_REDIS ?= no/BACKEND_REDIS ?= yes/" config.mk  \
- && sed -i "s/BACKEND_HTTP ?= no/BACKEND_HTTP ?= yes/" config.mk   \
- && sed -i "s/BACKEND_POSTGRES ?= no/BACKEND_POSTGRES ?= yes/" config.mk   \
- && sed -i "s/BACKEND_JWT ?= no/BACKEND_JWT ?= yes/" config.mk  \
+ && sed -i "s/BACKEND_REDIS ?= yes/BACKEND_REDIS ?= no/" config.mk  \
+ && sed -i "s/BACKEND_HTTP ?= yes/BACKEND_HTTP ?= no/" config.mk   \
+ && sed -i "s/BACKEND_POSTGRES ?= yes/BACKEND_POSTGRES ?= no/" config.mk   \
+ && sed -i "s/BACKEND_JWT ?= yes/BACKEND_JWT ?= no/" config.mk  \
  && sed -i "s/BACKEND_MONGO ?= no/BACKEND_MONGO ?= yes/" config.mk  \
- && sed -i "s/BACKEND_FILES ?= no/BACKEND_FILES ?= yes/" config.mk  \
+ && sed -i "s/BACKEND_FILES ?= yes/BACKEND_FILES ?= no/" config.mk  \
  && sed -i "s/MOSQUITTO_SRC =/MOSQUITTO_SRC = ..\//" config.mk \
  && sed -i "s/EVP_MD_CTX_new/EVP_MD_CTX_create/g" cache.c  \
  && sed -i "s/EVP_MD_CTX_free/EVP_MD_CTX_destroy/g" cache.c  \
