--- a/viniot-mosquitto/mosquitto.conf
+++ b/viniot-mosquitto/mosquitto.conf
@@ -15,4 +15,5 @@ connection_messages true
 # Default listener
 port 1883
 
+auth_plugin /usr/local/lib/auth-plug.so
 include_dir /mosquitto/config/conf.d/
