--- a/viniot-mosquitto/mosquitto.conf
+++ b/viniot-mosquitto/mosquitto.conf
@@ -1,10 +1,12 @@
 persistence true
 persistence_file mosquitto.db
-persistence_location /mosquitto/data/
-cafile /mosquitto/config/certs/ca.crt
-keyfile /mosquitto/config/certs/server.key
-certfile /mosquitto/config/certs/server.crt
-tls_version tlsv1.1
+persistence_location /etc/mosquitto/data/
+password_file /mosquitto/config/mosquittopass
+cafile /etc/mosquitto/certs/ca.crt
+keyfile /etc/mosquitto/certs/server.key
+certfile /etc/mosquitto/certs/server.crt
+tls_version tlsv1.2
+allow_anonymous false
 
 user mosquitto
 
@@ -14,6 +16,7 @@ connection_messages true
 
 # Default listener
 port 1883
+port 9883
 
 auth_plugin /usr/local/lib/go-auth.so
-include_dir /mosquitto/config/conf.d/
+include_dir /etc/mosquitto/conf.d/
