--- a/viniot-mosquitto/mosquitto.conf
+++ b/viniot-mosquitto/mosquitto.conf
@@ -18,4 +18,4 @@ port 1883
 port 9883
 
 auth_plugin /usr/local/lib/go-auth.so
-include_dir /etc/mosquitto/conf.d/
+include_dir /etc/mosquitto/conf.d
