--- a/service-web-rest/src/main/resources/application.properties
+++ b/service-web-rest/src/main/resources/application.properties
@@ -19,3 +19,4 @@ logging.level.org.apache.curator: ${LOGGING_LEVEL_ZOOKEEPER}
 logging.level.org.apache.kafka: ${LOGGING_LEVEL_KAFKA}
 
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter: DEBUG
+server.max-http-header-size=2048KB
