--- a/sitewhere-java-model/build.gradle
+++ b/sitewhere-java-model/build.gradle
@@ -1,5 +1,7 @@
 description = 'SiteWhere Java Model'
 
+ext['lombok.version'] = '1.18.8'
+
 apply plugin: 'java'
 dependencies {
 	// Jackson JSON processing.
@@ -8,6 +10,12 @@ dependencies {
 	
 	// Date/time conversions.
     compile group: 'joda-time', name: 'joda-time', version:'2.9.1'
+
+    // Lombok
+    compileOnly "org.projectlombok:lombok:${rootProject.ext['lombok.version']}"
+    testCompileOnly "org.projectlombok:lombok:${rootProject.ext['lombok.version']}"
+    annotationProcessor "org.projectlombok:lombok:${rootProject.ext['lombok.version']}"
+    testAnnotationProcessor "org.projectlombok:lombok:${rootProject.ext['lombok.version']}"
 }
 
 task sourcesJar(type: Jar) {
