--- a/service-web-rest/src/main/resources/application.properties
+++ b/service-web-rest/src/main/resources/application.properties
@@ -20,3 +20,7 @@ logging.level.org.apache.kafka: ${LOGGING_LEVEL_KAFKA}
 
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter: DEBUG
 server.max-http-header-size=2048KB
+
+javamelody.enabled=true
+javamelody.spring-monitoring-enabled=true
+javamelody.init-parameters.log=true
