--- a/service-web-rest/src/main/resources/application.properties
+++ b/service-web-rest/src/main/resources/application.properties
@@ -24,3 +24,4 @@ server.max-http-header-size=2048KB
 javamelody.enabled=true
 javamelody.spring-monitoring-enabled=true
 javamelody.init-parameters.log=true
+management.server.port: 8081
