--- a/service-event-sources/build.gradle
+++ b/service-event-sources/build.gradle
@@ -23,6 +23,8 @@ dependencies {
     compile group: 'javax.websocket', name: 'javax.websocket-api', version:'1.1'
     compile group: 'org.glassfish.tyrus', name: 'tyrus-server', version:'1.13.1'
     compile group: 'org.glassfish.tyrus', name: 'tyrus-container-grizzly-server', version:'1.13.1'
+	compile group: 'org.eclipse.paho', name: 'org.eclipse.paho.client.mqttv3', version: '1.2.1'
+
 }
 test {
     exclude '**/*'
