--- a/service-web-rest/build.gradle
+++ b/service-web-rest/build.gradle
@@ -50,20 +50,20 @@ dependencies {
 }
 
 // Pull SiteWhere admin user interface from GitHub.
-task pullSwaggerUserInterface() {
+/*task pullSwaggerUserInterface() {
 	// Clone SiteWhere repository.
 	delete "${projectDir}/sitewhere-ui-build/sitewhere2-swagger-ui"
 	println "Pulling sitewhere2-swagger-ui from GitHub..."
 	def repo = Grgit.clone(dir: "${projectDir}/sitewhere-ui-build/sitewhere2-swagger-ui", 
 		uri: 'https://github.com/anhgv252/sitewhere2-swagger-ui.git')
 	repo.close()
-}
+}*/
 
 // Before building the Spring Boot WAR, copy Swagger interface.
 apply plugin: 'war'
 bootWar {
 	classifier = 'boot'
-	dependsOn pullSwaggerUserInterface
+	//dependsOn pullSwaggerUserInterface
 	with {
 		from( "${projectDir}/sitewhere-ui-build/sitewhere2-swagger-ui" )
 	}
