change config database ir

--- a/service-infrared/build.gradle
+++ b/service-infrared/build.gradle
@@ -10,6 +10,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.integration:spring-integration-mqtt'
 
     // spring boot grpc
     compile "io.github.lognet:grpc-spring-boot-starter:${rootProject.ext['grpc.spring.boot.version']}"
