--- a/service-infrared/build.gradle
+++ b/service-infrared/build.gradle
@@ -45,6 +45,7 @@ dependencies {
     compile group: 'com.orbitz.consul', name: 'consul-client', version: '1.3.5'
 
     annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
+    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1'
 
 }
 
